[package]
name = "rusty_reverse_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
axum-server = { version = "0.6", features = ["tls-rustls"] }
chrono = "0.4.35"
reqwest = { version = "0.12.0", features = ["stream"] }
serde = { version = "1.0.197", features = ["serde_derive"] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.12"
